use immutable list except case when InvocationContext constructor takes list in parameters